@startuml
'https://plantuml.com/class-diagram

class App {
    +main()
    +start()
}
class TodoList {
    -list: ObservableList<TodoItem>

    +getList()
    +addItem()
    +removeItem()
    +clearList()
    +generateExportFile()
    +importItemsFromFile()
}

class TodoItem {
    -description: String
    -dueDate: Date
    -isCompleted: boolean

    +getDescription()
    +setDescription()
    +getDueDate()
    +setDueDate()
    +getIsComplete()
    +setIsComplete()
}

class TodoListController {
    +setStage()
    +clearListClicked()
    +exportListClicked()
    +importListClicked()
    +removeItemClicked()
    +showCompletedItemClicked()
    +showIncompleteItemsClicked()
    +addItemClicked()
    +initialize()
    +editDescription()
    +editDueDate()
    +editIsComplete()
}

class AddItemModalController {
    -list: TodoList

    +addNewItemClicked()
    +setTodoList()
}

java.fxApplication <|-- App
App -- TodoList
TodoList -- TodoItem
TodoList -- TodoListController
TodoListController -- AddItemModalController
@enduml